# automata

./: .env.example  Cargo.toml  README.md
config/: app.yml
docs/: database-setup.md
examples/: complete_workflow_demo.rs  simple_workflow.rs
migrations/: 20250728052023_create_initial_schema.sql  20250728052052_insert_demo.sql  20250728052115_insert_advanced.sql  README.md
specs/: 0001-basic-ideas.md  0002-prd.md
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: handlers.rs  mod.rs  models.rs  server.rs
src/core/: engine.rs  execution.rs  mod.rs  scheduler.rs  workflow.rs
src/dsl/: expression.rs  mod.rs  parser.rs  validator.rs  workflow.pest
src/nodes/: mod.rs  registry.rs  traits.rs
src/nodes/builtin/: conditional.rs  control_flow.rs  database.rs  http.rs  mod.rs  transformer.rs  validator.rs
src/security/: auth.rs  jwt.rs  mod.rs
src/state/: db_models.rs  manager.rs  mod.rs  models.rs  postgres.rs  traits.rs
ui/: .gitignore  package.json
ui/src/: App.tsx
ui/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
ui/src/components/ui/: alert.tsx  data-table.tsx
ui/src/components/workflow/: DslEditor.tsx  NodeLibrary.tsx  WorkflowCanvas.tsx
ui/src/components/workflow/nodes/: WorkflowNode.tsx
ui/src/pages/: Dashboard.tsx  ExecutionDetail.tsx  ExecutionList.tsx  WorkflowDetail.tsx  WorkflowEditor.tsx  WorkflowList.tsx  index.ts
ui/src/services/: api.ts  index.ts  websocket.ts
ui/src/stores/: app.ts  execution.ts  index.ts  workflow.ts
ui/src/types/: api.ts  index.ts  workflow.ts
ui/src/utils/: dslParser.ts
