[package]
name = "automata"
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """
High-performance workflow automation engine built with Rust
"""
readme = "README.md"
categories = ["development-tools", "automation", "web-programming"]
keywords = ["workflow", "automation", "engine", "async", "performance"]

[dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
hyper = "1.6"

# Database and storage
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "macros",
] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# DSL parsing
pest = "2.8"
pest_derive = "2.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
] }


# UUID and time
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15"

# Authentication and security
jsonwebtoken = "9.3"
argon2 = "0.5"

# Concurrency utilities
dashmap = "6"
arc-swap = "1.7"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Additional utilities
num_cpus = "1.17"
once_cell = "1.21"
regex = "1.11"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.20"

[features]
default = []
profiling = []
